# tape-encoder

./: .gitignore  Cargo.toml  README.md  cleanup.sh  flake.nix  test.sh
src/: config.rs  ffmpeg.rs  fileio.rs  flags.rs  main.rs  media_info.rs  metadata.rs
